경매 실시간 정보변경(웹소켓)

--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,10 @@ dependencies {
     testImplementation 'org.springframework.security:spring-security-test'
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
+    // Jackson ObjectMapper
+//    implementation 'com.fasterxml.jackson.core:jackson-databind:2.12.3'
+
 }
 
 tasks.named('test') {
