관리자페이지 CSS 수정

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,8 @@
 
 # Gradle
 .gradle
+/build/
+.gradletasknamecache
 
 # Gradle and Maven with auto-import
 # When using Gradle or Maven with auto-import, you should exclude module files,
