프로퍼티스 배포용 디비 주소

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,9 +9,9 @@ spring.mvc.view.suffix=.jsp
 
 # DB
 spring.datasource.driver-class-name=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
-spring.datasource.url=jdbc:log4jdbc:mysql://121.65.47.74:4100/guree?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
-spring.datasource.username=guree
-spring.datasource.password=1111
+spring.datasource.url=jdbc:log4jdbc:mysql://34.47.100.36:3306/guree?characterEncoding=UTF-8&serverTimezone=Asia/Seoul
+spring.datasource.username=root
+spring.datasource.password=root
 
 # Mybatis
 mybatis.mapper-locations=classpath:/mappers/*.xml
